--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -1,9 +1,11 @@
-<div class="header">
+<div class="header" ng-switch on="authenticated">
   <ul class="nav nav-pills pull-right">
     <li class="active"><a ng-href="/">Home</a></li>
     <li><a ng-href="/about">About</a></li>
     <li><a ng-href="/secured/contact-us">Contact</a></li>
+    <li><a ng-href="/secured/contact-us" ng-switch-when="true">Praveen Rajappan</a></li>
+    <li><a ng-href="/secured/contact-us" ng-switch-when="false">Log In</a></li>
     <li><div class="fb-login-button" data-max-rows="1" data-size="small" data-show-faces="false" data-auto-logout-link="false"></div></li>
   </ul>
-  <h3 class="text-muted">Curious World</h3>
+  <h3 class="text-muted">Curious World</h3>  
 </div>
